docs/sf-export/sfdx-raw/objects/Draft__c/Draft__c.object-meta.xml
<CustomObject>
    <label>Draft</label>
    <nameField>
        <displayFormat>Draft-{000000}</displayFormat>
        <label>Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drafts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>