docs/sf-export/sfdx-raw/objects/Draft__c/fields/Bank_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Status__c</fullName>
    <label>Bank Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R01 Insufficient Funds</fullName>
                <label>R01: Insufficient Funds</label>
            </value>
            <value>
                <fullName>R02 Account Closed</fullName>
                <label>R02: Account Closed</label>
            </value>
            <value>
                <fullName>R03 No Account/Unable to Locate Account</fullName>
                <label>R03: No account or unable to locate account</label>
            </value>
            <value>
                <fullName>R04 Invalid account number</fullName>
                <label>R04: Invalid account number</label>
            </value>
            <value>
                <fullName>R05 Unauthorized Debit to Consumer Account</fullName>
                <label>R05: Unauthorized debit entry</label>
            </value>
            <value>
                <fullName>R06 Returned per ODFI request The ODFI has requested the return</fullName>
                <label>R06: Returned per ODFI request The ODFI has requested the return</label>
            </value>
            <value>
                <fullName>R07 Authorization revoked by customer</fullName>
                <label>R07: Authorization revoked by customer</label>
            </value>
            <value>
                <fullName>R08 Payment Stopped or Stop Payment on Item</fullName>
                <label>R08: Payment stopped</label>
            </value>
            <value>
                <fullName>R09 Uncollected Funds</fullName>
                <label>R09: Insufficient collected funds in account being charged</label>
            </value>
            <value>
                <fullName>R10 Customer advises not authorized</fullName>
                <label>R10: Customer advises not authorized</label>
            </value>
            <value>
                <fullName>R11 Check Truncation Entry Return</fullName>
                <label>R11: Check Truncation Entry Return</label>
            </value>
            <value>
                <fullName>R16 Account Frozen</fullName>
                <label>R16: Account frozen/entry returned per OFAC instruction</label>
            </value>
            <value>
                <fullName>R20 Non-Transaction account</fullName>
                <label>R20: Non-Transaction account</label>
            </value>
            <value>
                <fullName>R29 Corporate customer advises not authorized</fullName>
                <label>R29: Corporate customer advises not authorized</label>
            </value>
            <value>
                <fullName>R51 Item Related to RCK Entry is Ineligible or RCK Entry is Improper</fullName>
            </value>
            <value>
                <fullName>L09 Invalid Individual Name/Company Name</fullName>
            </value>
            <value>
                <fullName>Invalid Fed ACH</fullName>
            </value>
            <value>
                <fullName>Transaction previously returned unauthorized</fullName>
            </value>
            <value>
                <fullName>Test Row</fullName>
                <isActive>false</isActive>
                <label>Test Row</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>