docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Draft_Amount__c</fullName>
    <label>Escrow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>