docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Cleared_Date__c</fullName>
    <label>Draft Cleared Date</label>
    <type>Date</type>
</CustomField>