docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Date__c</fullName>
    <label>Draft Date</label>
    <type>Date</type>
</CustomField>