docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Draft_Name_Formula__c</fullName>
    <formula>&apos;Date: &apos;+ Text(Draft_Date__c) +&apos;, Amount: &apos;+ Text( Draft_Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Name Formula</label>
    <type>Text</type>
</CustomField>