docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Status__c.field-meta.xml
<CustomField>
    <fullName>Draft_Status__c</fullName>
    <label>Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Skipped Payment</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>