docs/sf-export/sfdx-raw/objects/Draft__c/fields/Draft_Total_Excl_Monthly_Processor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Draft_Total_Excl_Monthly_Processor_Fee__c</fullName>
    <formula>Retainer_Fee__c + Setup_Fee__c + Service_Fee__c + Draft_Amount__c + Program_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Total Excl Monthly Processor Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>