docs/sf-export/sfdx-raw/objects/Draft__c/fields/DS_Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>DS_Escrow_Amount__c</fullName>
    <description>CD-327: For Docusign purpose, Draft total amount without processor and setup fee. 
CD-371: To Fix Escrow balance issue, changed the formula to only drafts from : Retainer_Fee__c + Service_Fee__c + Draft_Amount__c + Program_Fee__c
CRM-596- To fix the balance issue, changed the formula to only draft amount from setup_Fee__c + Processor_Fee__c</description>
    <formula>Draft_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Escrow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>