docs/sf-export/sfdx-raw/objects/Draft__c/fields/External_Data__c.field-meta.xml
<CustomField>
    <fullName>External_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Data</label>
    <referenceTo>External_Data__c</referenceTo>
    <relationshipLabel>Drafts</relationshipLabel>
    <relationshipName>Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>