docs/sf-export/sfdx-raw/objects/Draft__c/fields/External_RAM_Id__c.field-meta.xml
<CustomField>
    <fullName>External_RAM_Id__c</fullName>
    <label>External RAM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>