docs/sf-export/sfdx-raw/objects/Draft__c/fields/External_SAS_Id__c.field-meta.xml
<CustomField>
    <fullName>External_SAS_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>To store the external SAS Id for the payment record</description>
    <externalId>true</externalId>
    <label>External SAS Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>