docs/sf-export/sfdx-raw/objects/Draft__c/fields/Processor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processor_Fee__c</fullName>
    <label>Bank Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>