docs/sf-export/sfdx-raw/objects/Draft__c/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <label>Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>