docs/sf-export/sfdx-raw/objects/Draft__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <label>Program Plan</label>
    <referenceTo>Program_Plan__c</referenceTo>
    <relationshipLabel>Drafts</relationshipLabel>
    <relationshipName>Drafts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>