docs/sf-export/sfdx-raw/objects/Draft__c/fields/Retainer_SetupFee_Draft__c.field-meta.xml
<CustomField>
    <fullName>Retainer_SetupFee_Draft__c</fullName>
    <formula>OR(Retainer_Fee__c &gt; 0,  Setup_Fee__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer SetupFee Draft</label>
    <type>Checkbox</type>
</CustomField>