docs/sf-export/sfdx-raw/objects/Draft__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>