docs/sf-export/sfdx-raw/objects/Draft__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync Pending</fullName>
            </value>
            <value>
                <fullName>In Sync</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>