docs/sf-export/sfdx-raw/objects/Draft__c/fields/Valid_Payment__c.field-meta.xml
<CustomField>
    <fullName>Valid_Payment__c</fullName>
    <formula>AND(
    Draft_Date__c &lt; TODAY(),
    OR(
        TEXT(Draft_Status__c) = &quot;Completed&quot;,
        TEXT(Draft_Status__c) = &quot;NSF&quot;,
        TEXT(Draft_Status__c) = &quot;Skipped Payment&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Payment</label>
    <type>Checkbox</type>
</CustomField>