docs/sf-export/sfdx-raw/objects/Draft__c/fields/Wire_Payment__c.field-meta.xml
<CustomField>
    <fullName>Wire_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Payment</label>
    <type>Checkbox</type>
</CustomField>