docs/sf-export/sfdx-raw/objects/Draft__c/fields/Wire_Payments__c.field-meta.xml
<CustomField>
    <fullName>Wire_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Payments</label>
    <type>Checkbox</type>
</CustomField>