docs/sf-export/sfdx-raw/objects/Draft__c/fields/Wire_Type__c.field-meta.xml
<CustomField>
    <fullName>Wire_Type__c</fullName>
    <label>Wire Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>