docs/sf-export/sfdx-raw/objects/Draft__c/listViews/My_Drafts.listView-meta.xml
<ListView>
    <fullName>My_Drafts</fullName>
    <columns>NAME</columns>
    <columns>Draft_Total_Amount__c</columns>
    <columns>Draft_Date__c</columns>
    <columns>Draft_Status__c</columns>
    <columns>Program_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Drafts</label>
</ListView>